# ChangeLog for gnome-extra/gnome-media
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.197 2009/07/23 22:43:01 eva Exp $

  23 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-media-2.18.0-noesd.patch, -gnome-media-2.20.1.ebuild,
  -gnome-media-2.22.0.ebuild, -gnome-media-2.24.0.1.ebuild:
  Clean up old revisions.

  30 May 2009; Brent Baude <ranger@gentoo.org> gnome-media-2.26.0.ebuild:
  Marking gnome-media-2.26.0 ~ppc64 for bug 269308

  12 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome-media-2.26.0.ebuild, metadata.xml:
  Fix bug 269548, IUSE=canberra -> +sound, remove no-longer-existing TODO
  from dodoc

*gnome-media-2.26.0 (10 May 2009)

  10 May 2009; Arun Raghavan <ford_prefect@gentoo.org>
  +gnome-media-2.26.0.ebuild,
  +files/gnome-media-2.26.0-automagic-canberra.patch,
  +files/gnome-media-2.26.0-missing-cddbslave-cflags.patch, metadata.xml:
  Bump to 2.26.0. This now includes the volume control applet that sits in
  the systray to replace the old one, adds sound theme support using
  libcanberra, and uses pulseaudio/GStreamer, depending on the USE flag.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  arm/sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-media-2.24.0.1-r1:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  Stable on sparc, bug #260063

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  Re-add ~arm/~sh

  03 Apr 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  gnome-media needs gnome-doc-utils

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-media-2.24.0.1-r1.ebuild:
  x86 stable, bug #260063
