@@ -3,7 +3,6 @@ AUX gnome-media-2.26.0-missing-cddbslave-cflags.patch 764 RMD160 5d788ac6ac1d0ba
 DIST gnome-media-2.24.0.1.tar.bz2 2344888 RMD160 695f4cf9b170a381c243846749f5fad916f8bbca SHA1 2704b4cd13b7f776a358e517a5baf5d97455b85b SHA256 bfa79a9bea5ba6f73a6b0a232917bc7eefbed69819e42d0b09372b0c7ed3e853
 DIST gnome-media-2.26.0.tar.bz2 2662523 RMD160 0720cf0394148d8dc3cf6423a8b817a70f1486ed SHA1 23ec588fdf5df3eef542278952fe78ed032d354a SHA256 39e7646d0790e05a010da1eb2d7552dcb5311abd72f001477c9c465d7146b9f7
 EBUILD gnome-media-2.24.0.1-r1.ebuild 1904 RMD160 993c1fca7dae806f3fefcc7fdf7220cbf974eb8d SHA1 3851283f7e0b846453e110382d31366a015b4c8c SHA256 1397e6acb3472b91b2e4937ff9196bcfce2ac2f9d8b453512f83f8d25e20d309
-EBUILD gnome-media-2.24.0.1.ebuild 1828 RMD160 1fb235be66d30b14fbfbbab08e1c139b761de4bb SHA1 bd1109a2f97ab7073b3680ecc93c3b3391c4102f SHA256 6ddd8405db8b8da32d23702bfd51a382cd31966e6b8143ef7462a3042fb53a28
-EBUILD gnome-media-2.26.0.ebuild 2618 RMD160 3dc3bfa359866ce9367dcaff529f205ed7aed26d SHA1 7314351bc8105bb6d37ecc51efbbabc0c6dbb3a8 SHA256 87826d0c19b681fbeed882dffa437003ad6a7b6c6b864b9ac2db975c8c128ed3
-MISC ChangeLog 24969 RMD160 dff8123181c2df8fbb17c96255d85d4aa539ad87 SHA1 5f49f12e41cccc46c75f3ec655d4a5a4f51965e4 SHA256 62295baee08c0031a75d8c5e20f00a8135931b53ce48d6b9a2f97463958224d1
+EBUILD gnome-media-2.26.0.ebuild 2660 RMD160 52e3ae74919c2797d32ea3df419fc8aea257c745 SHA1 ab78d105bc249484e8df9ccc340521b819f3c87f SHA256 ac09ad597f91a0ea739600b8e4e1d56530b52644dd7f7b868328038be867f9be
+MISC ChangeLog 25274 RMD160 8cc744af02f37d97c0ef83595f8a5f345cc3b4ac SHA1 194c5dcba68daf50b4fff6305d7ca8ebae52d4e3 SHA256 53e8005d8031c8b59c346c2f3544a3a1ce1970282fb7fd70126f47e19341b783
 MISC metadata.xml 339 RMD160 bbf6402aadd2e37cf510214bd63b56627d88c19a SHA1 c1844224e92e5f691b8f59c9811bb8fe35751932 SHA256 0c92a127c7c041ad9eb833dc79524111e674facc15bd482f4ac0eb048f7d63f1
