@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-media/gnome-media-2.26.0.ebuild,v 1.3 2009/05/30 14:20:42 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-media/gnome-media-2.26.0.ebuild,v 1.5 2009/08/23 21:48:12 eva Exp $
 
 EAPI="2"
 
@@ -32,8 +32,10 @@ RDEPEND=">=dev-libs/glib-2.18.2:2
 		|| (
 			>=media-plugins/gst-plugins-cdio-0.10
 			>=media-plugins/gst-plugins-cdparanoia-0.10 ) )
-	pulseaudio? ( >=media-sound/pulseaudio-0.9.15 )
-	sound? ( >=media-libs/libcanberra-0.4[gtk] )
+	pulseaudio? ( >=media-sound/pulseaudio-0.9.15[glib] )
+	sound? (
+		>=media-libs/libcanberra-0.4[gtk]
+		x11-themes/sound-theme-freedesktop )
 	dev-libs/libxml2
 	>=media-plugins/gst-plugins-meta-0.10-r2:0.10
 	>=media-plugins/gst-plugins-gconf-0.10.1"
